[package]
name = "qmk-keyboard-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
hidapi = "2.6.1"
#async-std = { version = "1.7.0", features = ["attributes"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
udev = "^0.8"

[profile.release]
lto = true
